--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="%PUBLIC_URL%/favicon.ico" />
-
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
@@ -16,38 +12,22 @@
       name="description"
       content="Web site created using create-react-app" />
     <link
+      rel="icon"
+      href="images/nexus_logo.ico"
+      sizes="500x500"
+      type="image/x-icon" />
+    <link
+      rel="icon"
+      href="images/nexus_logo.png"
+      sizes="500x500"
+      type="image/png" />
+    <link
       rel="apple-touch-icon"
       href="images/nexus_logo.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link
-      rel="manifest"
-      href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Nexus Collab</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
